# market_ml_research

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/data/raw/: SPY_data.csv
notebooks/: Data_prep.ipynb  loading_data.ipynb
notebooks/data/: rawSPY_data.csv
src/market_ml/: data_loader.py
tests/: test_data_loader.py
